2011-12-09  6.7.4-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-0, SVN revision 6162.

2010-12-06  6.7.4-0 Glenn Randers-Pehrson <glennrp@image...>
  * Eliminated use of FARDATA in coders/png.c; it won't be supported in
    libpng-1.6.0 and is not needed now.

2011-11-29  6.7.4-0 Cristy  <quetzlzacatenango@image...>
  * Add GetQuantumFormat() method to return the quantum format (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=19961).
  * Allow unspecified width/height in geometries with the aspect flag (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19964).
  * MagickGetImageDepth() no longer returns the depth setting but instead
    computes the depth of the image.
   
2011-12-02  6.7.4-0 Anthony  <quetzlzacatenango@image...>
  * Fixed Equal-Area Cropping (size and minimum of delta increments)

2011-12-01  6.7.3-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-10, SVN revision 6106.

2011-11-29  6.7.3-10 Cristy  <quetzlzacatenango@image...>
  * Delay reading TIFF EXIF properties to prevent premature exit.
  * Remove duplicates from the configuration file search path under Windows.
  * Use viewbox offset when setting affine transform translation (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19943).
  * Ensure equally sized tiles for -crop 11x2@ (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18322).
  * Recognize SI prefixes for jpeg:extent (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19944).

2011-11-27  6.7.3-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-9, SVN revision 6092

2011-11-27  6.7.3-9 Cristy  <quetzlzacatenango@image...>
  * Upgrade libtool / ltdl to version 2.4.7.

2011-11-25  6.7.3-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-8, SVN revision 6084

2011-11-20  6.7.3-8 Cristy  <quetzlzacatenango@image...>