@@ -2487,10 +2487,6 @@ MagickExport Image *StatisticImageChannel(const Image *image,
   const ChannelType channel,const StatisticType type,const size_t width,
   const size_t height,ExceptionInfo *exception)
 {
-#define StatisticWidth \
-  (width == 0 ? GetOptimalKernelWidth2D((double) width,0.5) : width)
-#define StatisticHeight \
-  (height == 0 ? GetOptimalKernelWidth2D((double) height,0.5) : height)
 #define StatisticImageTag  "Statistic/Image"
 
   CacheView
@@ -2508,6 +2504,10 @@ MagickExport Image *StatisticImageChannel(const Image *image,
 
   PixelList
     **restrict pixel_list;
+
+  ssize_t
+    neighbor_height,
+    neighbor_width;
 
   ssize_t
     y;
@@ -2531,7 +2531,10 @@ MagickExport Image *StatisticImageChannel(const Image *image,
       statistic_image=DestroyImage(statistic_image);
       return((Image *) NULL);
     }
-  pixel_list=AcquirePixelListThreadSet(StatisticWidth,StatisticHeight);
+  neighbor_width=width == 0 ? GetOptimalKernelWidth2D((double) width,0.5) : width;
+  neighbor_height=height == 0 ? GetOptimalKernelWidth2D((double) height,0.5) :
+    height;
+  pixel_list=AcquirePixelListThreadSet(neighbor_width,neighbor_height);
   if (pixel_list == (PixelList **) NULL)
     {
       statistic_image=DestroyImage(statistic_image);
@@ -2569,9 +2572,9 @@ MagickExport Image *StatisticImageChannel(const Image *image,
 
     if (status == MagickFalse)
       continue;
-    p=GetCacheViewVirtualPixels(image_view,-((ssize_t) StatisticWidth/2L),y-
-      (ssize_t) (StatisticHeight/2L),image->columns+StatisticWidth,
-      StatisticHeight,exception);
+    p=GetCacheViewVirtualPixels(image_view,-((ssize_t) neighbor_width/2L),y-
+      (ssize_t) (neighbor_height/2L),image->columns+neighbor_width,
+      neighbor_height,exception);
     q=QueueCacheViewAuthenticPixels(statistic_view,0,y,statistic_image->columns,      1,exception);
     if ((p == (const PixelPacket *) NULL) || (q == (PixelPacket *) NULL))
       {
@@ -2598,16 +2601,16 @@ MagickExport Image *StatisticImageChannel(const Image *image,
       r=p;
       s=indexes+x;
       ResetPixelList(pixel_list[id]);
-      for (v=0; v < (ssize_t) StatisticHeight; v++)
+      for (v=0; v < (ssize_t) neighbor_height; v++)
       {
-        for (u=0; u < (ssize_t) StatisticWidth; u++)
+        for (u=0; u < (ssize_t) neighbor_width; u++)
           InsertPixelList(image,r+u,s+u,pixel_list[id]);
-        r+=image->columns+StatisticWidth;
-        s+=image->columns+StatisticWidth;
+        r+=image->columns+neighbor_width;
+        s+=image->columns+neighbor_width;
       }
       GetMagickPixelPacket(image,&pixel);
-      SetMagickPixelPacket(image,p+StatisticWidth*StatisticHeight/2,indexes+
-        StatisticWidth*StatisticHeight/2+x,&pixel);
+      SetMagickPixelPacket(image,p+neighbor_width*neighbor_height/2,indexes+
+        neighbor_width*neighbor_height/2+x,&pixel);
       switch (type)
       {
         case GradientStatistic:
