@@ -1,3 +1,8 @@
+2011-12-12  6.7.4-0 Cristy  <quetzlzacatenango@image...>
+  * Sped up -noise option when radius is 0.
+  * Read concatentated arcs correctly in a SVG path (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19992).
+
 2011-12-09  6.7.4-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.4-0, SVN revision 6162.
 
